--- a/aoc2023.cabal
+++ b/aoc2023.cabal
@@ -13,4 +13,5 @@ executable aoc2023
     main-is:          Main.hs
     build-depends:    base ^>=4.17.2.0
     hs-source-dirs:   app
+    other-modules:    Day1
     default-language: Haskell2010
